--- a/print.html
+++ b/print.html
@@ -631,6 +631,56 @@ mapping</td>
 </tr>
 </tbody>
 </table>
+<h1 id="evaluation"><a class="header" href="#evaluation">evaluation</a></h1>
+<div class="r-fit-text">
+<p>requirements analysis (35%) + design (35%) + midterm (30%)</p>
+</div>
+<div class="columns mt-4">
+<div class="column mt-2" width="60%">
+<ul>
+<li>requirements analysis, software design: <strong>team work</strong></li>
+<li>midterm: <strong>individual</strong>
+<ul>
+<li>Moodle test</li>
+<li>50 random multiple-choice questions</li>
+</ul>
+</li>
+<li>each part should reach the minimum (&gt;50%)</li>
+</ul>
+</div>
+<div class="column" width="40%">
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: right;">score (%)</th>
+<th style="text-align: center;">grade</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: right;">0-50</td>
+<td style="text-align: center;">1</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">51-66</td>
+<td style="text-align: center;">2</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">67-76</td>
+<td style="text-align: center;">3</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">77-86</td>
+<td style="text-align: center;">4</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">87-100</td>
+<td style="text-align: center;">5</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 <h1 id="materials"><a class="header" href="#materials">materials</a></h1>
 <div class="columns">
 <div class="column mt-3" width="60%">
