deploy: 922aef1fb2d962123cbbb1e2c879561591b2a4a7

--- a/print.html
+++ b/print.html
@@ -547,13 +547,13 @@ in teams</strong>
 <tr class="odd">
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">2025-09-17</td>
-<td style="text-align: center;">intro, software architecture, SDLC</td>
+<td style="text-align: center;">intro, software architecture</td>
 <td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
-<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;">SDLC, scrum, kanban</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
