--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -202,13 +202,13 @@ data-visibility="hidden">
 <tr class="odd">
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">2025-09-17</td>
-<td style="text-align: center;">intro, software architecture, SDLC</td>
+<td style="text-align: center;">intro, software architecture</td>
 <td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
-<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;">SDLC, scrum, kanban</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
@@ -312,13 +312,13 @@ class="title-slide slide level1 exclude-header">
 <tr class="odd">
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">2025-09-17</td>
-<td style="text-align: center;">intro, software architecture, SDLC</td>
+<td style="text-align: center;">intro, software architecture</td>
 <td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
-<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;">SDLC, scrum, kanban</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
