deploy: 6169113c19cecdce688922fac0c83e94f62965b1

--- a/print.html
+++ b/print.html
@@ -2029,58 +2029,6 @@ started</td>
 want and can express it in technical terms.</p>
 <p>Although usually the customer does not know what they want, so agile
 usually work better.</p>
-<h1 id="scrum"><a class="header" href="#scrum">SCRUM</a></h1>
-<p><img src="lectures/figures/scrum_sprint.drawio.svg" alt="" /></p>
-<h1 id="kanban"><a class="header" href="#kanban">kanban</a></h1>
-<div class="columns">
-<div class="column" width="45%">
-<figure>
-<img src="lectures/figures/borrowed/simple_kanban_board.jpg" width="700"
-alt="simple kanban board by Jeff Lasovski | CC BY-SA 3.0" />
-<figcaption aria-hidden="true">simple kanban board<br>by <a
-href="https://commons.wikimedia.org/wiki/File:Simple-kanban-board-.jpg">Jeff
-Lasovski</a> | <a
-href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA
-3.0</a></figcaption>
-</figure>
-</div>
-<div class="column" width="55%">
-<ul>
-<li>notes move from left to right</li>
-<li>order denote priority</li>
-<li>allways process the right- and topmost one to finish it ASAP</li>
-<li>tool-dependent but a note can indicate:
-<ul>
-<li>who’s responsible</li>
-<li>how much effort to do it</li>
-<li>etc.</li>
-</ul>
-</li>
-</ul>
-</div>
-</div>
-<div class="notes">
-<p>The word “<em>kanban</em>” roughly means board in Japanese (signboard or
-billboard, actually).</p>
-</div>
-<h2 id="kanban-for-job-hunting"><a class="header" href="#kanban-for-job-hunting">kanban for job hunting</a></h2>
-<p><img src="lectures/figures/job_hunting_kanban.drawio.svg" alt="" /></p>
-<div class="notes">
-<p>Kanban is a general technique, you can use it for household chores, for
-job applications (e.g., backlog, application sent, interview, done,
-declined). A whiteboard can be used or there a many different software
-for the task. Some general examples are: - Trello
-(https://trello.com/), - free and paid plans - Taiga
-(https://taiga.io/). - open source, self-hosted, cloud based free and
-paid plans - WeKan (https://wekan.github.io/) - open source, self-hosted</p>
-</div>
-<h2 id="kanban-in-software-development"><a class="header" href="#kanban-in-software-development">kanban in software development</a></h2>
-<p><img src="lectures/figures/kanban.drawio.svg" alt="" /></p>
-<div class="notes">
-<p>Kanban is widespread in software development. The major code hosting
-solutions (GitHub, GitLab, Bitbucket, Gitea) all have some board
-functionalities.</p>
-</div>
 <h1 id="references-1"><a class="header" href="#references-1">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
@@ -2967,6 +2915,10 @@ process that uses a visual, pull-based system</p>
 <p><img src="lectures/figures/kanban.drawio.svg" alt="" /></p>
 </div>
 </div>
+<div class="notes">
+<p>The word “<em>kanban</em>” roughly means board in Japanese (signboard or
+billboard, actually).</p>
+</div>
 <h2 id="principles-of-kanban"><a class="header" href="#principles-of-kanban">principles of kanban</a></h2>
 <div class="columns">
 <div class="column" width="70%">
@@ -2984,6 +2936,45 @@ process that uses a visual, pull-based system</p>
 <p>These Kanban practices are collectively called a Kanban system. Those
 who participate in the value delivery of a Kanban system are called
 Kanban system members.</p>
+</div>
+<h1 id="how-does-kanban-work"><a class="header" href="#how-does-kanban-work">how does kanban work?</a></h1>
+<div class="columns">
+<div class="column" width="45%">
+<figure>
+<img src="lectures/figures/borrowed/simple_kanban_board.jpg" width="700"
+alt="simple kanban board by Jeff Lasovski | CC BY-SA 3.0" />
+<figcaption aria-hidden="true">simple kanban board<br>by <a
+href="https://commons.wikimedia.org/wiki/File:Simple-kanban-board-.jpg">Jeff
+Lasovski</a> | <a
+href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA
+3.0</a></figcaption>
+</figure>
+</div>
+<div class="column" width="55%">
+<ul>
+<li>notes move from left to right</li>
+<li>order denote priority</li>
+<li>allways process the right- and topmost one to finish it ASAP</li>
+<li>tool-dependent but a note can indicate:
+<ul>
+<li>who’s responsible</li>
+<li>how much effort to do it</li>
+<li>etc.</li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+<h2 id="kanban-for-job-hunting"><a class="header" href="#kanban-for-job-hunting">kanban for job hunting</a></h2>
+<p><img src="lectures/figures/job_hunting_kanban.drawio.svg" alt="" /></p>
+<div class="notes">
+<p>Kanban is a general technique, you can use it for household chores, for
+job applications (e.g., backlog, application sent, interview, done,
+declined). A whiteboard can be used or there a many different software
+for the task. Some general examples are: - Trello
+(https://trello.com/), - free and paid plans - Taiga
+(https://taiga.io/). - open source, self-hosted, cloud based free and
+paid plans - WeKan (https://wekan.github.io/) - open source, self-hosted</p>
 </div>
 <h1 id="defining-and-visualizing-the-workflow"><a class="header" href="#defining-and-visualizing-the-workflow">defining and visualizing the workflow</a></h1>
 <div class="columns">
@@ -3146,6 +3137,13 @@ alt="Kanban card together with the bag of bolts" />
 bolts</figcaption>
 </figure>
 </div>
+</div>
+<h1 id="kanban-in-software-development"><a class="header" href="#kanban-in-software-development">kanban in software development</a></h1>
+<p><img src="lectures/figures/kanban.drawio.svg" alt="" /></p>
+<div class="notes">
+<p>Kanban is widespread in software development. The major code hosting
+solutions (GitHub, GitLab, Bitbucket, Gitea) all have some board
+functionalities.</p>
 </div>
 <h1 id="scrumban"><a class="header" href="#scrumban">scrumban</a></h1>
 <p>SCRUM and kanBAN can coexist</p>
