--- a/slides/03_kanban.html
+++ b/slides/03_kanban.html
@@ -96,6 +96,10 @@ process that uses a visual, pull-based system</p>
 <p><img data-src="figures/kanban.drawio.svg" /></p>
 </div>
 </div>
+<aside class="notes">
+<p>The word “<em>kanban</em>” roughly means board in Japanese (signboard
+or billboard, actually).</p>
+</aside>
 </section>
 <section id="principles-of-kanban" class="slide level2">
 <h2>principles of kanban</h2>
@@ -115,6 +119,48 @@ data-src="figures/publicdomainvectors/scrum-task-board.svg" /></p>
 <p>These Kanban practices are collectively called a Kanban system. Those
 who participate in the value delivery of a Kanban system are called
 Kanban system members.</p>
+</aside>
+</section></section>
+<section>
+<section id="how-does-kanban-work" class="title-slide slide level1">
+<h1>how does kanban work?</h1>
+<div class="columns">
+<div class="column" style="width:45%;">
+<figure>
+<img data-src="figures/borrowed/simple_kanban_board.jpg" width="700"
+alt="simple kanban board by Jeff Lasovski | CC BY-SA 3.0" />
+<figcaption aria-hidden="true">simple kanban board<br>by <a
+href="https://commons.wikimedia.org/wiki/File:Simple-kanban-board-.jpg">Jeff
+Lasovski</a> | <a
+href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA
+3.0</a></figcaption>
+</figure>
+</div><div class="column" style="width:55%;">
+<ul>
+<li>notes move from left to right</li>
+<li>order denote priority</li>
+<li>allways process the right- and topmost one to finish it ASAP</li>
+<li>tool-dependent but a note can indicate:
+<ul>
+<li>who’s responsible</li>
+<li>how much effort to do it</li>
+<li>etc.</li>
+</ul></li>
+</ul>
+</div>
+</div>
+</section>
+<section id="kanban-for-job-hunting" class="slide level2">
+<h2>kanban for job hunting</h2>
+<p><img data-src="figures/job_hunting_kanban.drawio.svg" /></p>
+<aside class="notes">
+<p>Kanban is a general technique, you can use it for household chores,
+for job applications (e.g., backlog, application sent, interview, done,
+declined). A whiteboard can be used or there a many different software
+for the task. Some general examples are: - Trello (https://trello.com/),
+- free and paid plans - Taiga (https://taiga.io/). - open source,
+self-hosted, cloud based free and paid plans - WeKan
+(https://wekan.github.io/) - open source, self-hosted</p>
 </aside>
 </section></section>
 <section>
@@ -294,6 +340,17 @@ bolts</figcaption>
 </figure>
 </div>
 </div>
+</section>
+
+<section id="kanban-in-software-development"
+class="title-slide slide level1">
+<h1>kanban in software development</h1>
+<p><img data-src="figures/kanban.drawio.svg" /></p>
+<aside class="notes">
+<p>Kanban is widespread in software development. The major code hosting
+solutions (GitHub, GitLab, Bitbucket, Gitea) all have some board
+functionalities.</p>
+</aside>
 </section>
 
 <section id="scrumban" class="title-slide slide level1">
