deploy: 631315df717b57e03be226f9705fceca82cb78ca

--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@ Two</a> -
 by Marco Bürckel</li>
 <li><a href="https://github.blog/engineering/why-write-adrs/">Why Write ADRs</a> - by
 Eli Perkins</li>
+<li><a href="https://www.praxisframework.org/en/library/stacey-matrix">Stacey
+matrix</a></li>
 </ul>
 <h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
