--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -850,6 +850,9 @@ craftmanship (later)</li>
 <!--- Joplin 3.3.13 (note taking app): 1 million lines of code
     - sync capabilities-->
 <table>
+<caption><span class="text-smaller">measurements made with <a
+href="https://github.com/XAMPPRocky/tokei">tokei</a>, the whole repo is
+counted</span></caption>
 <thead>
 <tr class="header">
 <th style="text-align: left;">app</th>
@@ -896,10 +899,10 @@ data-cites="quill2024how">[5]</span></td>
 </tr>
 </tbody>
 </table>
-<div class="text-smaller">
-<p>measurements made with <a
-href="https://github.com/XAMPPRocky/tokei">tokei</a>, the whole repo is
-counted</p>
+<div class="text-smaller mt-3">
+<p>further read <a
+href="https://interestingengineering.com/lists/whats-the-biggest-software-package-by-lines-of-code">about
+size of software</a> by Christopher McFadden</p>
 </div>
 <aside class="notes">
 <p>Microsoft does not disclose the actual value, the codebase size of
@@ -1407,6 +1410,10 @@ href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA</a></figc
 </section>
 <section id="project-complexity" class="slide level2">
 <h2>project complexity</h2>
+<div class="text-smaller">
+<p>Stacey matrix <span class="citation"
+data-cites="stacey2007strategic">[14]</span></p>
+</div>
 <div class="r-stack">
 <div class="exclude">
 <p><img data-src="figures/complex_projects.drawio.cropped_no_people.svg"
@@ -1537,7 +1544,7 @@ the new/unknown technology</p>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
-<div id="refs" class="references csl-bib-body" role="list">
+<div id="refs" class="text-smaller references csl-bib-body" role="list">
 <div id="ref-enwiki:1233276268" class="csl-entry" role="listitem">
 <div class="csl-left-margin">[1] </div><div
 class="csl-right-inline">Wikipedia contributors, <span>“Computer program
@@ -1648,6 +1655,12 @@ encyclopedia.”</span> <a
 href="https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;oldid=1300921689"
 class="uri">https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;oldid=1300921689</a>,
 2025.</div>
+</div>
+<div id="ref-stacey2007strategic" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[14] </div><div class="csl-right-inline">R.
+D. Stacey, <em>Strategic management and organisational dynamics: The
+challenge of complexity to ways of thinking about organisations</em>.
+Pearson education, 2007.</div>
 </div>
 </div>
 </section>
