--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -698,6 +698,9 @@ craftmanship (later)</li>
 <!--- Joplin 3.3.13 (note taking app): 1 million lines of code
     - sync capabilities-->
 <table>
+<caption><span class="text-smaller">measurements made with <a
+href="https://github.com/XAMPPRocky/tokei">tokei</a>, the whole repo is
+counted</span></caption>
 <thead>
 <tr class="header">
 <th style="text-align: left;">app</th>
@@ -744,9 +747,13 @@ data-cites="quill2024how">(Quill, 2024)</span></td>
 </tr>
 </tbody>
 </table>
-<div class="text-smaller">
-<p>measurements made with <a href="https://github.com/XAMPPRocky/tokei">tokei</a>, the
-whole repo is counted</p>
+<p><span class="text-smaller">measurements made with
+<a href="https://github.com/XAMPPRocky/tokei">tokei</a>, the whole repo is
+counted</span></p>
+<div class="text-smaller mt-3">
+<p>further read <a href="https://interestingengineering.com/lists/whats-the-biggest-software-package-by-lines-of-code">about size of
+software</a>
+by Christopher McFadden</p>
 </div>
 <div class="notes">
 <p>Microsoft does not disclose the actual value, the codebase size of
@@ -1219,6 +1226,9 @@ href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA</a></figc
 </div>
 </div>
 <h2 id="project-complexity"><a class="header" href="#project-complexity">project complexity</a></h2>
+<div class="text-smaller">
+<p>Stacey matrix (Stacey, 2007)</p>
+</div>
 <div class="r-stack">
 <div class="fragment">
 <p><img src="figures/complex_projects.drawio.cropped.svg"
@@ -1325,7 +1335,8 @@ in a project.</p>
 <p>to do that, you need to know all the unknowns, so you need
 <strong>requirements analysis</strong>, and <strong>learning</strong> the new/unknown technology</p>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
-<div id="refs" class="references csl-bib-body hanging-indent"
+<div id="refs"
+class="text-smaller references csl-bib-body hanging-indent"
 line-spacing="2">
 <div id="ref-bykovski2020simple" class="csl-entry">
 <p>Bykovski, M. (2020). <em>Simple vs. Complicated vs. Complex vs. chaotic</em>.
@@ -1376,6 +1387,11 @@ https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
                     " class="uri">
 https://techcult.com/how-many-lines-of-code-in-windows-10/
 </a>.</p>
+</div>
+<div id="ref-stacey2007strategic" class="csl-entry">
+<p>Stacey, R. D. (2007). <em>Strategic management and organisational dynamics:
+The challenge of complexity to ways of thinking about organisations</em>.
+Pearson education.</p>
 </div>
 <div id="ref-stahli2021software" class="csl-entry">
 <p>Stähli, L. (2021). <em>Software Architecture Metaphors — medium.com</em>.
