deploy: 5e7f8a07e146ca0841f31d619ef46c8ad7663f54

--- a/lectures/01_sdlc.html
+++ b/lectures/01_sdlc.html
@@ -249,6 +249,46 @@ of the software.</p>
 </div>
 </div>
 </div>
+<h2 id="extreme-programming"><a class="header" href="#extreme-programming">extreme programming</a></h2>
+<ul>
+<li>advocates frequent releases in short development cycles</li>
+<li>intended to improve productivity and introduce checkpoints at which
+new customer requirements can be adopted</li>
+</ul>
+<div class="columns">
+<div class="column" width="50%">
+<ul>
+<li>features
+<ul>
+<li>programming in pairs,</li>
+<li>doing extensive code review,</li>
+<li>unit testing of all code,</li>
+<li>not programming features until they are actually needed,</li>
+<li>flat management structure</li>
+</ul>
+</li>
+</ul>
+</div>
+<div class="column" width="50%">
+<figure>
+<img src="figures/extreme_programming.drawio.svg"
+data-preview-image="figures/extreme_programming_white.drawio.svg"
+height="200" alt="based on (Yerukala, 2023)" />
+<figcaption aria-hidden="true"><span class="text-smaller">based on <span
+class="citation" data-cites="yerukala2023what">(Yerukala,
+2023)</span></span></figcaption>
+</figure>
+</div>
+</div>
+<div class="text-align-left">
+<ul>
+<li>considered a type of agile software development</li>
+</ul>
+</div>
+<div class="text-smaller mt-2">
+<p>spike is a task for exploring or answering questions, not delivering a
+product</p>
+</div>
 <h1 id="agile-model"><a class="header" href="#agile-model">agile model</a></h1>
 <div class="columns">
 <div class="column" width="50%">
@@ -260,9 +300,7 @@ product over multiple iterations</li>
 </ul>
 </div>
 <div class="column" width="50%">
-<div class="r-stack">
 <img src="figures/agile.drawio.svg" width="500" />
-</div>
 </div>
 </div>
 <h1 id="the-agile-manifesto"><a class="header" href="#the-agile-manifesto">the agile manifesto</a></h1>
@@ -456,6 +494,14 @@ and why to fake it. <em>IEEE Transactions on Software Engineering</em>, <em>2</e
 <div id="ref-royce1970managing" class="csl-entry">
 <p>Royce, W. W. (1970). Managing the development of large software systems:
 Concepts and techniques. <em>Proc. IEEE WESTCON, Los Angeles</em>, 1–9.</p>
+</div>
+<div id="ref-yerukala2023what" class="csl-entry">
+<p>Yerukala, M. (2023). <em>What is extreme programming - XP practices</em>.
+<a href="
+                   https://mindmajix.com/what-is-extreme-programming
+                    " class="uri">
+https://mindmajix.com/what-is-extreme-programming
+</a>.</p>
 </div>
 </div>
 
