--- a/slides/01_sdlc.html
+++ b/slides/01_sdlc.html
@@ -156,6 +156,7 @@ lower level part of the software.</p>
 </aside>
 </section>
 
+<section>
 <section id="iterative-model" class="title-slide slide level1">
 <h1>iterative model</h1>
 <div class="columns">
@@ -176,7 +177,46 @@ ones</li>
 </div>
 </div>
 </section>
-
+<section id="extreme-programming" class="slide level2">
+<h2>extreme programming</h2>
+<ul>
+<li>advocates frequent releases in short development cycles</li>
+<li>intended to improve productivity and introduce checkpoints at which
+new customer requirements can be adopted</li>
+</ul>
+<div class="columns">
+<div class="column" style="width:50%;">
+<ul>
+<li>features
+<ul>
+<li>programming in pairs,</li>
+<li>doing extensive code review,</li>
+<li>unit testing of all code,</li>
+<li>not programming features until they are actually needed,</li>
+<li>flat management structure</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:50%;">
+<figure>
+<img data-src="figures/extreme_programming.drawio.svg"
+data-preview-image="figures/extreme_programming_white.drawio.svg"
+height="200" alt="based on [4]" />
+<figcaption aria-hidden="true"><span class="text-smaller">based on <span
+class="citation"
+data-cites="yerukala2023what">[4]</span></span></figcaption>
+</figure>
+</div>
+</div>
+<div class="text-align-left">
+<ul>
+<li>considered a type of agile software development</li>
+</ul>
+</div>
+<div class="text-smaller mt-2">
+<p>spike is a task for exploring or answering questions, not delivering
+a product</p>
+</div>
+</section></section>
 <section id="agile-model" class="title-slide slide level1">
 <h1>agile model</h1>
 <div class="columns">
@@ -188,9 +228,7 @@ product over multiple iterations</li>
 <li>SCRUM is an agile methodology</li>
 </ul>
 </div><div class="column" style="width:50%;">
-<div class="r-stack">
 <p><img data-src="figures/agile.drawio.svg" width="500" /></p>
-</div>
 </div>
 </div>
 </section>
@@ -414,6 +452,15 @@ role="listitem">
 Forsberg and H. Mooz, <span>“The relationship of system engineering to
 the project cycle,”</span> <em>Center for Systems Management</em>, vol.
 5333, 1991.</div>
+</div>
+<div id="ref-yerukala2023what" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[4] </div><div class="csl-right-inline">M.
+Yerukala, <span>“What is extreme programming - XP practices.”</span> <a
+href="
+                   https://mindmajix.com/what-is-extreme-programming
+                    " class="uri">
+                   https://mindmajix.com/what-is-extreme-programming
+</a>, 03-Apr-2023.</div>
 </div>
 </div>
 </section>
