--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -169,6 +169,9 @@
 <li><a href="https://medium.com/decoding-tech/software-architecture-metaphors-90992e9be5f4">Software Architecture
 Metaphors</a> -
 by Lisa Stähli</li>
+<li><a href="https://www.simplethread.com/software-complexity-killing-us/">Software Complexity Is Killing
+Us</a> by
+Justin Etheredge</li>
 <li><a href="https://www.developerfusion.com/article/84899/what-is-software-architecture/">What is Software
 Architecture?</a> -
 by Kevlin Henney</li>
@@ -190,6 +193,12 @@ matrix</a></li>
 <li><a href="slides/03_kanban.html">kanban</a></li>
 </ol>
 <h3 id="readings-1"><a class="header" href="#readings-1">readings</a></h3>
+<p>extreme programming</p>
+<ul>
+<li><a href="https://mindmajix.com/what-is-extreme-programming">What is Extreme Programming - XP
+Practices</a> by
+Madhuri Yerukala</li>
+</ul>
 <p>scrum</p>
 <ul>
 <li><a href="resources/2020-Scrum-Guide-US.pdf">The Scrum Guide</a></li>
