--- a/slides/04_requirement_analysis.html
+++ b/slides/04_requirement_analysis.html
@@ -50,6 +50,7 @@
     }  </style>
   <link rel="stylesheet" href="../assets/reveal.js-5.2.1//dist/theme/black.css" id="theme">
   <link rel="stylesheet" href="../assets/custom.css"/>
+  <link rel="stylesheet" href="../assets/helpers.css"/>
   <!--<script src="../assets/reveal_menu/menu.js"></script>
   <link rel="stylesheet" href="../assets/reveal_menu/menu.css"/>
 
