--- a/slides/project.html
+++ b/slides/project.html
@@ -31,6 +31,7 @@
   </style>
   <link rel="stylesheet" href="../assets/reveal.js-5.2.1//dist/theme/black.css" id="theme">
   <link rel="stylesheet" href="../assets/custom.css"/>
+  <link rel="stylesheet" href="../assets/helpers.css"/>
   <!--<script src="../assets/reveal_menu/menu.js"></script>
   <link rel="stylesheet" href="../assets/reveal_menu/menu.css"/>
 
@@ -57,9 +58,9 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <section id="the-project" class="title-slide slide level1">
 <h1>the project</h1>
 <p>An event organizer company entrusts your software development company
-to create a drone show choreography designer software. They have just
-bought 256 drones and they want to be able to do smaller-scale drone
-shows on parties, birthdays and weddings.</p>
+to create a choreography designer software for drone shows. They have
+just bought 512 drones and they want to be able to do smaller-scale
+drone shows on parties, birthdays, and weddings.</p>
 <p>The software should be able to manage the position of every drone in
 a given space in respect of the time. Every drone is capable of switch
 on RGB LEDs with a given light intensity. The software should be able to
@@ -70,8 +71,28 @@ follow.</p>
 </section>
 <section id="drone-show-example" class="slide level2">
 <h2>drone show example</h2>
-<p><a href="https://www.youtube.com/watch?v=3G1KBu6H6BM">Dragon Boat
-Show with 1500 drones in Shenzhen, China</a></p>
+<div class="columns">
+<div class="column" style="width:60%;">
+<figure>
+<img data-src="figures/borrowed/wikipedia/drone_show_at_sydney_2023.jpg"
+alt="Drone Show at Sydney (2023) by Leoxiong | CC-BY-SA" />
+<figcaption aria-hidden="true">Drone Show at Sydney (2023) by Leoxiong |
+<a
+href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA</a></figcaption>
+</figure>
+</div><div class="column text-smaller mt-1" style="width:40%;">
+<p>from YouTube</p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=3G1KBu6H6BM">Dragon Boat
+Show with 1500 drones in Shenzhen, China</a></li>
+<li><a href="https://www.youtube.com/watch?v=7fKfBb7x9WQ">How Drone
+Shows Work</a>
+<ul>
+<li>by Julius Moorman</li>
+</ul></li>
+</ul>
+</div>
+</div>
 </section></section>
 <section>
 <section id="contents" class="title-slide slide level1">
@@ -150,7 +171,7 @@ height="300" /></p>
 </ul></li>
 <li>identify dependencies between the functions / modules</li>
 <li>plan sprints with usable increments</li>
-<li>deadline: <strong>3 December 2024</strong> (week 13)
+<li>deadline: <strong>10 December 2025</strong> (week 13)
 <ul>
 <li>when the team also presents the design as a presentation</li>
 </ul></li>
@@ -200,8 +221,9 @@ submission
 </ul></li>
 <li>and the presentation</li>
 </ul>
-<p>you should the submit these by 3 December 2024 via Moodle, when you
+<p>you have to submit these by 10 December 2025 via Moodle,<br>when you
 also present your work</p>
+<p>it is enough to upload it by one person from each team</p>
 </section>
 
 <section>
