deploy: 4205f3eaef7b198a32e6dfb2d3048ed9e69b229e

--- a/slides/project.html
+++ b/slides/project.html
@@ -85,14 +85,28 @@ href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA</a></figc
 <ul>
 <li><a href="https://www.youtube.com/watch?v=3G1KBu6H6BM">Dragon Boat
 Show with 1500 drones in Shenzhen, China</a></li>
-<li><a href="https://www.youtube.com/watch?v=7fKfBb7x9WQ">How Drone
-Shows Work</a>
-<ul>
-<li>by Julius Moorman</li>
-</ul></li>
 </ul>
 </div>
 </div>
+</section>
+<section id="choreography-design-in-focus" class="slide level2">
+<h2>choreography design in focus</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<ul>
+<li>the software has to focus on the choreography design, not the
+software running on the drone</li>
+<li>you can assume that there is a software from the drone manufacturer
+<ul>
+<li>which is an external “component” of the software system</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/choreographer/viewport.drawio.svg" /></p>
+</div>
+</div>
+<p><a href="https://www.youtube.com/watch?v=7fKfBb7x9WQ">How Drone Shows
+Work</a> by Julius Moorman</p>
 </section></section>
 <section>
 <section id="contents" class="title-slide slide level1">
