deploy: 698a09f8ab922311742331850ed2d8a51ea33301

--- a/slides/project.html
+++ b/slides/project.html
@@ -94,11 +94,13 @@ Show with 1500 drones in Shenzhen, China</a></li>
 <div class="columns">
 <div class="column" style="width:60%;">
 <ul>
+<li>the client company wants to design and operate the show</li>
 <li>the software has to focus on the choreography design, not the
 software running on the drone</li>
-<li>you can assume that there is a software from the drone manufacturer
+<li>you can assume that there is a software from the drone manufacturer,
+which deals with the hardware level
 <ul>
-<li>which is an external “component” of the software system</li>
+<li>it is an external “component” of the software system</li>
 </ul></li>
 </ul>
 </div><div class="column" style="width:40%;">
@@ -109,8 +111,8 @@ software running on the drone</li>
 Work</a> by Julius Moorman</p>
 </section></section>
 <section>
-<section id="contents" class="title-slide slide level1">
-<h1>contents</h1>
+<section id="contents-outline" class="title-slide slide level1">
+<h1>contents – outline</h1>
 <ul>
 <li>introduction
 <ul>
@@ -146,7 +148,7 @@ Work</a> by Julius Moorman</p>
 <li>first 3 level of C4</li>
 <li>also static and dynamic models of the software
 <ul>
-<li>UML</li>
+<li>4th level / UML</li>
 </ul></li>
 <li>UI mockups</li>
 </ul>
@@ -158,8 +160,14 @@ height="300" /></p>
 </section>
 <section id="diagrams-details" class="slide level2">
 <h2>diagrams details</h2>
+<blockquote>
+<p>overview first, zoom and filter, then details on demand</p>
+<p>– Ben Shneiderman</p>
+</blockquote>
+<div class="mt-2">
 <ul>
-<li>create a user story map in details for one role’s set of features
+<li>create a <strong>user story map</strong> in details for one role’s
+set of features
 <ul>
 <li>for example the choreography design</li>
 </ul></li>
@@ -169,10 +177,7 @@ height="300" /></p>
 <li>illustrate the every roles and the connections between them</li>
 </ul></li>
 </ul>
-<blockquote>
-<p>overview first, zoom and filter, then details on demand</p>
-<p>– Ben Shneiderman</p>
-</blockquote>
+</div>
 </section>
 <section id="work-in-agile-methodology" class="slide level2">
 <h2>work in agile methodology</h2>
