deploy: 045043a26bfe90902a4e94cba9564ad4d2bda4af

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -227,14 +227,14 @@ in teams</strong>
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">colloquial R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: right;">2025-10-01</td>
-<td style="text-align: center;">requirement analysis, user story
+<td style="text-align: center;">requirements analysis, user story
 mapping</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">formal R.A., workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
