--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -210,14 +210,14 @@ data-visibility="hidden">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">colloquial R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: right;">2025-10-01</td>
-<td style="text-align: center;">requirement analysis, user story
+<td style="text-align: center;">requirements analysis, user story
 mapping</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">formal R.A., workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
@@ -320,14 +320,14 @@ class="title-slide slide level1 exclude-header">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">colloquial R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: right;">2025-10-01</td>
-<td style="text-align: center;">requirement analysis, user story
+<td style="text-align: center;">requirements analysis, user story
 mapping</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">formal R.A., workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
