--- a/print.html
+++ b/print.html
@@ -496,6 +496,74 @@ anymore</a> - by Brett Cannon</li>
 <li><a href="lectures/slides/mindmap.html">mindmap</a></li>
 <li><a href="lectures/slides/mock_exam.html">mock exam</a></li>
 </ol>
+<div style="break-before: page; page-break-before: always;"></div><p>The goal of this course is to provide a common foundation in software
+engineering for students from various backgrounds. It aims to provide a
+shared terminology that enables experts in business informatics to be
+able to work seamlessly with software developers. The course introduces
+the fundamentals of modern software development methodologies and life
+cycle models, with a focusing in detail on Scrum and Kanban. The course
+covers requirements analysis and software architecture, both in theory
+and in practice. During the practical classes, the students explore and
+document the requirements of a software system.</p>
+<p>Then, during the second half of the semester, they design its
+architecture. For requirements analysis, the course applies user story
+mapping in accordance with the agile principles. For the software
+design, the course uses the C4 model, which is a set of hierarchical
+diagrams describing the architecture of a software system. The practical
+classes are workshops in which the students work in teams on the project
+assignment under an instructor’s guidance. During the second half of the
+semester, lectures also cover topics such as code quality, code review,
+testing and automation.</p>
+<h2 id="subject-outline"><a class="header" href="#subject-outline">subject outline</a></h2>
+<ol>
+<li>software architecture</li>
+<li>SDLC, scrum, kanban</li>
+<li>requirement analysis, user story mapping</li>
+<li>UML, C4</li>
+<li>design patterns</li>
+<li>interfaces, implementation planning</li>
+<li>wireframing, clean clode</li>
+<li>code quality, code review</li>
+<li>testing, working with legacy code</li>
+<li>CI, automatization, devops</li>
+</ol>
+<h2 id="learning-outcomes"><a class="header" href="#learning-outcomes">learning outcomes</a></h2>
+<h3 id="skills"><a class="header" href="#skills">skills</a></h3>
+<ul>
+<li>historical overview of software development methodologies</li>
+<li>knowledge of scrum and kanban methodologies</li>
+<li>the concept and role of system requirements</li>
+<li>system requirements modeling techniques (user story mapping)</li>
+<li>problem and topic area analysis techniques</li>
+<li>system design using the C4 model</li>
+<li>the importance of code quality, testing, and automation</li>
+</ul>
+<h3 id="knowledge"><a class="header" href="#knowledge">knowledge</a></h3>
+<p>After successfully completing the course, students will be able to:</p>
+<ul>
+<li>present the most important software development methodologies</li>
+<li>conduct research to effectively identify and understand system
+requirements</li>
+<li>apply the user story mapping method for requirements specification</li>
+<li>create a software architecture using the C4 model</li>
+<li>perform the most important feasibility studies</li>
+</ul>
+<h3 id="attitudes"><a class="header" href="#attitudes">attitudes</a></h3>
+<ul>
+<li>effective communication with development project participants and
+stakeholders</li>
+<li>effective, solution-oriented cooperation with system programmers and
+testers</li>
+</ul>
+<h3 id="autonomy-and-responsibilities"><a class="header" href="#autonomy-and-responsibilities">autonomy and responsibilities</a></h3>
+<ul>
+<li>students will be able to participate in information system development
+projects based on modern methodologies, either as team members or,
+after gaining sufficient experience, as leaders of smaller projects or
+sub-projects</li>
+<li>they will be able to make responsible decisions on planning and
+implementation issues</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="goal-of-this-course"><a class="header" href="#goal-of-this-course">goal of this course</a></h1>
 <ul>
 <li>provide a common foundation in software engineering for students from
