--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ matrix</a></li>
 <li><a href="slides/summary_week01.html">week 1 summary</a></li>
 <li><a href="slides/02_scrum.html">scrum</a></li>
 <li><a href="slides/03_kanban.html">kanban</a></li>
+<li><a href="slides/02_user_story.html">sample task</a></li>
 </ol>
 <h3 id="readings-1"><a class="header" href="#readings-1">readings</a></h3>
 <p>extreme programming</p>
