--- a/lectures/description.html
+++ b/lectures/description.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>subject description - handout</title>
+        <title>course description - handout</title>
 
 
         <!-- Custom HTML head -->
