deploy: 56d2b8b73e372bacb5110ee199cec11948ec4d66

--- a/print.html
+++ b/print.html
@@ -164,6 +164,7 @@
 <ol>
 <li><a href="lectures/slides/00_intro.html">intro, software architecture</a></li>
 <li><a href="lectures/slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="lectures/slides/01_project_assignment.html">project assignment</a></li>
 </ol>
 <h3 id="readings"><a class="header" href="#readings">readings</a></h3>
 <ul>
