--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 <ol>
 <li><a href="slides/00_intro.html">intro, software architecture</a></li>
 <li><a href="slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="slides/01_project_assignment.html">project assignment</a></li>
 </ol>
 <h3 id="readings"><a class="header" href="#readings">readings</a></h3>
 <ul>
