deploy: 552c13c0c6d3f9328c3990c9623c0eaa954e2ce0

--- a/print.html
+++ b/print.html
@@ -762,25 +762,9 @@ mapping</td>
 </table>
 </div>
 </div>
-<h1 id="materials"><a class="header" href="#materials">materials</a></h1>
-<div class="columns">
-<div class="column mt-3" width="60%">
-<ul>
-<li>available online in two formats
-<ul>
-<li>handout</li>
-<li>presentation</li>
-</ul>
-</li>
-<li><a href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/software-engineering</a></li>
-<li>also uploaded to Moodle as PDFs</li>
-</ul>
-</div>
-<div class="column" width="40%">
-<p><img src="lectures/../assets/qr_code.png" alt="" /></p>
-</div>
-</div>
 <h1 id="tools"><a class="header" href="#tools">tools</a></h1>
+<div class="columns">
+<div class="column" width="70%">
 <ul>
 <li>diagram drawing:
 <ul>
@@ -805,7 +789,7 @@ mapping</td>
 </ul>
 </li>
 </ul>
-<div class="notes">
+</div>
 </div>
 <h1 id="program-vs-software"><a class="header" href="#program-vs-software">program vs. software</a></h1>
 <div class="columns fragment">
@@ -1100,6 +1084,37 @@ craftmanship (later)</li>
 </div>
 </div>
 <h1 id="how-big-are-softwares"><a class="header" href="#how-big-are-softwares">how big are softwares?</a></h1>
+<p>software is often measured by the source lines of code</p>
+<div class="wide-quote">
+<blockquote>
+<p>A line of code (LOC) is any line of text in a code that is not a
+comment or blank line.</p>
+<p>– <a href="https://www.geeksforgeeks.org/software-engineering/lines-of-code-loc-in-software-engineering/">Lines of Code (LOC) in Software
+Engineering</a></p>
+</blockquote>
+</div>
+<div class="columns mt-3">
+<div class="column" width="30%">
+<p>2 lines (Python)</p>
+<pre><code class="language-python">for i in range(10):
+    print(i)
+</code></pre>
+</div>
+<div class="column" width="30%">
+<p>3 lines (Ruby)</p>
+<pre><code class="language-ruby">for i in 0..9 do
+   puts i
+end
+</code></pre>
+</div>
+<div class="column" width="30%">
+<p>1 line (Ruby)</p>
+<pre><code class="language-ruby"># print numbers from 0 to 9
+(0..9).each {|i| puts i}
+</code></pre>
+</div>
+</div>
+<h2 id="how-big-are-softwares-1"><a class="header" href="#how-big-are-softwares-1">how big are softwares?</a></h2>
 <p>software is often measured by the source lines of code</p>
 <!--- Vanilla Music Player for Android (1.3.2): 48 thousand lines of code (LOC)
 - VLC for Android (3.6.5): 264 thousand LOC-->
