deploy: 8d7d9edd23d72b8ba464d8f2b74e2b814d9bfc8b

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -1135,6 +1135,26 @@ developer time is expensive, reuse components</span></p>
 </div>
 </div>
 </div>
+<h2 id="is-it-possible-to-decrease-the-dependency-stack"><a class="header" href="#is-it-possible-to-decrease-the-dependency-stack">is it possible to decrease the dependency stack?</a></h2>
+<div class="columns">
+<div class="column" width="50%">
+<p><img src="figures/dep_labelled.drawio.svg" alt="" /></p>
+</div>
+<div class="column fragment" width="50%">
+<figure>
+<img src="figures/dep_inner.drawio.svg"
+alt="what if you don’t actually use everything from a dependency? why don’t you reimplement it?" />
+<figcaption aria-hidden="true">what if you don’t actually use everything
+from a dependency? why don’t you reimplement it?</figcaption>
+</figure>
+</div>
+</div>
+<div class="fragment">
+<div class="r-fit-text">
+<p>choose your dependencies wisely</p>
+</div>
+<p>which is actually an architecture decision</p>
+</div>
 <h2 id="complexity-classes"><a class="header" href="#complexity-classes">complexity classes</a></h2>
 <div class="text-smaller">
 <blockquote>
