--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -1334,6 +1334,28 @@ the developer time is expensive, reuse components</span></p>
 </div>
 </div>
 </section>
+<section id="is-it-possible-to-decrease-the-dependency-stack"
+class="slide level2">
+<h2>is it possible to decrease the dependency stack?</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="figures/dep_labelled.drawio.svg" /></p>
+</div><div class="column fragment" style="width:50%;">
+<figure>
+<img data-src="figures/dep_inner.drawio.svg"
+alt="what if you don’t actually use everything from a dependency? why don’t you reimplement it?" />
+<figcaption aria-hidden="true">what if you don’t actually use everything
+from a dependency? why don’t you reimplement it?</figcaption>
+</figure>
+</div>
+</div>
+<div class="fragment">
+<div class="r-fit-text">
+<p>choose your dependencies wisely</p>
+</div>
+<p>which is actually an architecture decision</p>
+</div>
+</section>
 <section id="complexity-classes" class="slide level2">
 <h2>complexity classes</h2>
 <div class="text-smaller">
